fix(index.css): break into mobile view at the right time

--- a/owalo-react/src/index.css
+++ b/owalo-react/src/index.css
@@ -356,7 +356,7 @@ button:hover {
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 900px) {
   .holder {
     height: calc(100vh - 50px);
     overflow: auto;
